# nethercade

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
nethercade_bundler/: Cargo.toml  README.md
nethercade_bundler/src/: config.rs  main.rs
nethercade_console/: Cargo.toml  README.md
nethercade_console/assets/: test sphere base.glb  test sphere metallic.glb  test sphere.glb
nethercade_console/src/: console_app.rs  main.rs
nethercade_console/src/audio/: mod.rs
nethercade_console/src/console/: mod.rs  network.rs  network_session.rs
nethercade_console/src/console/gui/: mod.rs  play_mode_gui.rs
nethercade_console/src/console/input/: gamepad_bindings.rs  input_code.rs  input_state.rs  key_bindings.rs  key_types.rs  local_input_manager.rs  mod.rs  mouse_state.rs  player_input_entry.rs
nethercade_console/src/console/wasm_contexts/: audio_context.rs  data.rs  draw_3d.rs  input_context.rs  mod.rs  random_context.rs  text_context.rs
nethercade_console/src/graphics/: mod.rs  virtual_gpu.rs
nethercade_console/src/graphics/virtual_gpu/: camera.rs  draw_3d_context.rs  environment_map.rs  frame_buffer.rs  frame_buffer.wgsl  immediate_renderer.rs  lights.rs  mesh.rs  mod.rs  pipeline.rs  preloaded_renderer.rs  quad_renderer.rs  shader.wgsl  textures.rs  vertex.rs  vgpu.rs  virtual_gpu_callback.rs  virtual_gpu_resources.rs  virtual_render_pass.rs
nethercade_core/: Cargo.toml  README.md
nethercade_core/src/: frame_rate.rs  lib.rs  resolution.rs  rom.rs
