[workspace]
resolver = "2"

default-members = [
    "nethercade_console"
]

members = [
    "nethercade_bundler",
    "nethercade_console",
    "nethercade_core",
]

[profile.release]
lto = true

[workspace.dependencies]
bytemuck = "1.21"
hashbrown = "0.15"
image = "0.25"
serde = "1.0"
wasmtime = "28"
zstd = "0.13.2"