[workspace]
resolver = "2"

members = [
    "nethercade_bundler",
    "nethercade_console",
    "nethercade_core",
]

[profile.release]
lto = "fat"

[workspace.dependencies]
# General Dependencies
hashbrown = { version = "0.15", features = ["serde"] }
paste = "1.0"
strum = { version = "0.26", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
bytemuck = "1.21"
glam = { version = "0.29", features = ["bytemuck"] }

# Serde and IO
serde = "1.0"
sonic-rs = { version = "0.3" }
bitcode = { version = "0.6", features = ["derive"] }
rfd = "0.15"
zstd = "0.13"

# UI & Graphics
eframe = { version = "0.30", features = ["wgpu"] }
egui = { version = "0.30", features = ["serde"] }
image = "0.25"

# Emulation & Gameplay
wasmtime = "28"
ggrs = "0.11"
gilrs = "0.11"
rodio = "0.20"
