[package]
name = "nethercade_console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "console"
path = "src/main.rs"

[dependencies]
nethercade_core = { path = "../nethercade_core" }

bitcode = { workspace = true }
bytemuck = { workspace = true }

eframe = { version = "0.30", features = ["wgpu"] }
rodio = "0.20"
ggrs = "0.11"
glam = {version = "0.29", features = ["bytemuck"] }
image = "0.25"
wasmtime = "28.0"
rfd = "0.15"
