[package]
name = "nethercade_console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "console"
path = "src/main.rs"

[dependencies]
nethercade_core = { path = "../nethercade_core" }

bitcode = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
hashbrown = { workspace = true }

eframe = { version = "0.30", features = ["wgpu"] }
egui = { version = "0.30", features = ["serde"] }
rodio = "0.20"
ggrs = "0.11"
glam = { version = "0.29", features = ["bytemuck"] }
image = "0.25"
wasmtime = "28.0"
rfd = "0.15"
gilrs = "0.11"
paste = "1.0"
strum = { version = "0.26", features = ["derive"] }
serde_json = "1.0"