[package]
name = "nethercade_console"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "console"
path = "src/main.rs"

[dependencies]
nethercade_core = { path = "../nethercade_core" }

bitcode = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
hashbrown = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
rodio = { workspace = true }
ggrs = { workspace = true }
glam = { workspace = true }
image = { workspace = true }
wasmtime = { workspace = true }
rfd = { workspace = true }
gilrs = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }
sonic-rs = { workspace = true }
zstd = { workspace = true }